2013-05-26 André Schenk <andre_schenk@users.sourceforge.net>
	* src/ib.*: added POM read for locomotives

2013-01-27 Achim Marikar <amarikar@users.sourceforge.net>
	* src/dccar.*: Add support for dc-car sender (serial pc-device)


--- Release 2.1.2 ----

2012-10-30 Matthias Trute <mtrute@web.de>
	* src/io.c: ioctl returns less bits of useful data than
	  an integer may hold. Make sure, every bit is initialized properly.
	* src/m6051.c: remove duplicate checks for reading feedback modules.

2012-10-28 Matthias Trute <mtrute@web.de>
	* src/m6051.c: correct the GA protocol checks for INIT.

2012-10-28 Guido Scholz <guido.scholz@bayernline.de>
	* src/ib.c: Rewrite firmware version report to show results in
	readable manner. Add options to handle a 57600 baud rate.
	* man/srcpd.8, man/srcpd.conf.5: Add information about syslog
	file /var/log/syslog as an alternative for /var/log/messages.

2012-10-27 Guido Scholz <guido.scholz@bayernline.de>
	* src/loconet.c: Improve getaddrinfo() usage to loop over every
	returned network address.
	* src/ib.c: Resort code to make forward declarations obsolete.
	Rename function reading P50 command responses. Rename function to
	enable/disable P50X mode.
	* src/ib.c, src/io.*: Replace int by bool parameter.

2012-03-26 André Schenk <andre_schenk@users.sourceforge.net>
	* src/ib.c: Fix usage of XEvtLok

2011-10-06 André Schenk <andre_schenk@users.sourceforge.net>
	* src/srcp-ga.c, src/srcp-ga.h, src/srcp-command.c: Add missing
	TERM GA function

2010-12-01 Guido Scholz <guido.scholz@bayernline.de>
	* src/li100.c: Fix GA feedback address nibble mask

2010-03-16 Guido Scholz <guido.scholz@bayernline.de>
	* srcp-gl.c: Clean up GL address validity check. Patch
	provided by Harald Barth.


--- Release 2.1.1 ----

2010-03-04 Guido Scholz <guido.scholz@bayernline.de>
	* srcp-fb.*, srcp-info.c, srcp-command.c: Fixed undelivered
	INFO messages caused by sizeof(msg).

2010-03-03 Guido Scholz <guido.scholz@bayernline.de>